--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,8 @@
               <shadedPattern>${project.groupId}.${project.artifactId}.commando</shadedPattern>
             </relocation>
             <relocation>
-              <pattern>com.github.hornta.versioned-config</pattern>
-              <shadedPattern>${project.groupId}.${project.artifactId}.versioned-config</shadedPattern>
+              <pattern>com.github.hornta.versioned_config</pattern>
+              <shadedPattern>${project.groupId}.${project.artifactId}.versioned_config</shadedPattern>
             </relocation>
             <relocation>
               <pattern>io.papermc.lib</pattern>
@@ -170,6 +170,7 @@
       <groupId>LibsDisguises</groupId>
       <artifactId>LibsDisguises</artifactId>
       <version>10.0.8</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.papermc</groupId>
